--- a/CSS/modal.css
+++ b/CSS/modal.css
@@ -20,7 +20,6 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.4);
     color: var(--cor-branco)
   }
   
@@ -30,7 +29,6 @@
     padding: 20px;
     width: 80%;
     max-width: 500px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
     text-align: center;
   }
@@ -74,28 +72,31 @@
     transform: translateY(2px);
   }
   
+
 @media screen and (max-width: 720px) {
     .modal-content {
         width: 90%;
-        padding: 55px;
-
+        padding: 6vh 5vw;
+        max-width: none; /* <-- ESSA É A CHAVE */
     }
 
     .modal h2 {
-        font-size: 4vh;
+        font-size: 8vw;
+        margin-bottom: 4vh;
     }
 
     .modal p {
-        font-size: 16px;
+        font-size: 4vw;
+        margin-bottom: 4vh;
+    }
+
+    .modal img {
+        max-width: 60%;
+        margin-bottom: 4vh;
     }
 
     .modal button {
-        font-size: 3.5vw;
-        padding: 1vh 8vw;
-    }
-
-    #openModalBtn {
-        font-size: 4vw;
-        padding: 2vh 6vw;
+        font-size: 5vw;
+        padding: 1vh 10vw;
     }
 }
